--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "eslint-plugin-react": "^7.11.1",
     "jest-expo": "~27.0.0",
     "react-native-scripts": "1.14.0",
-    "react-test-renderer": "16.3.1"
+    "react-test-renderer": "16.3.1",
+    "babel-eslint": "^8.2.6"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
@@ -25,6 +26,7 @@
   },
   "dependencies": {
     "expo": "^27.0.1",
+    "prop-types": "^15.6.0",
     "react": "16.3.1",
     "react-native": "~0.55.2",
     "react-navigation": "^2.11.2"
