--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "prop-types": "^15.6.0",
     "react": "16.3.1",
     "react-native": "~0.55.2",
+    "react-native-collapsible": "^0.13.0",
     "react-native-snap-carousel": "^3.7.2",
-    "react-navigation": "^2.11.2"
+    "react-navigation": "^2.11.2",
+    "uuid": "^3.3.2"
   }
 }
